base-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mseconsumer-ingress
  namespace: xl-test
spec:
  rules:
    - host: xl.mse.test
      http:
        paths:
          - backend:
              service:
                name: mseconsumer-service
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
