gray-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/canary: 'true'
    nginx.ingress.kubernetes.io/canary-by-header: name
    nginx.ingress.kubernetes.io/canary-by-header-value: jinfeng
  name: mseconsumer-ingress-gray
  namespace: xl-test
spec:
  rules:
    - host: xl.mse.test
      http:
        paths:
          - backend:
              service:
                name: mseconsumer-gray-service
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
